implemented home page with responsiveness

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
       href="https://fonts.googleapis.com/css2?family=Audiowide&family=Rampart+One&family=Rubik+Glitch&family=Workbench&family=Zain:ital,wght@0,400;0,700;0,800;0,900;1,400&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
 
     <!-- css file link -->
+    <link rel="stylesheet" href="/stylesheet/utils/arrowbutton.css" />
     <link rel="stylesheet" href="/stylesheet/header.css" />
     <link rel="stylesheet" href="/stylesheet/home.css" />
+    <link rel="stylesheet" href="/stylesheet/hero.css" />
     <title>STRIKE</title>
   </head>
   <body>
@@ -29,8 +35,9 @@
         <div class="right">
           <a href="#home">HOME</a>
           <a href="#about">ABOUT</a>
-          <a href="#services">SERVICES</a>
-          <a href="#contact">CONTACT</a>
+          <a href="#courses">COURSE</a>
+          <a class="live-nav" href="#live">LIVE</a>
+          <a href="#contact"><i class="ri-user-line"></i></a>
         </div>
 
         <!-- Hamburger Icon (Label linked to the Checkbox) -->
@@ -50,8 +57,110 @@
       </nav>
     </header>
     <main>
-      <section class="s1">section 1</section>
-      <section class="s2">section 2</section>
+      <section class="s1" id="home">
+        <div class="heading">
+          <h1>
+            Skip the<code class="basics-span">basics</code>.<br />
+            We only teach essential,<br />
+            <span class="high-span">high-impact</span> skills.
+          </h1>
+        </div>
+        <div class="btns">
+          <!-- From Uiverse.io by Creatlydev -->
+          <button href="#" class="button" style="--clr: #333">
+            <span class="button__icon-wrapper">
+              <svg
+                viewBox="0 0 14 15"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                class="button__icon-svg"
+                width="10"
+              >
+                <path
+                  d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
+                  fill="currentColor"
+                ></path>
+              </svg>
+
+              <svg
+                viewBox="0 0 14 15"
+                fill="none"
+                width="10"
+                xmlns="http://www.w3.org/2000/svg"
+                class="button__icon-svg button__icon-svg--copy"
+              >
+                <path
+                  d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
+                  fill="currentColor"
+                ></path>
+              </svg>
+            </span>
+            Paid Courses
+          </button>
+
+          <!-- From Uiverse.io by Creatlydev -->
+          <button href="#" class="button" style="--clr: #ff3a33">
+            <span class="button__icon-wrapper">
+              <svg
+                viewBox="0 0 14 15"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                class="button__icon-svg"
+                width="10"
+              >
+                <path
+                  d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
+                  fill="currentColor"
+                ></path>
+              </svg>
+
+              <svg
+                viewBox="0 0 14 15"
+                fill="none"
+                width="10"
+                xmlns="http://www.w3.org/2000/svg"
+                class="button__icon-svg button__icon-svg--copy"
+              >
+                <path
+                  d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
+                  fill="currentColor"
+                ></path>
+              </svg>
+            </span>
+            Watch Demo
+            <span class="icon-yt"><i class="ri-youtube-fill"></i></span>
+          </button>
+        </div>
+        <div class="stats">
+          <div>
+            <p>
+              200+ <br />
+              Students taught
+            </p>
+          </div>
+          <div>
+            <p>
+              4+ <br />
+              Courses
+            </p>
+          </div>
+          <div>
+            <p>212k+ <br />Youtube Subs</p>
+          </div>
+        </div>
+        <div class="extra">
+          <i class="ri-arrow-down-line"></i>
+          Scroll
+        </div>
+      </section>
+      <section class="s2" id="hero">
+        <h1>
+          STR<span
+            ><img
+              src="/assets/14a41f92-f694-4348-8c9f-0b42e0197539-Photoroom.png" /></span
+          >KE
+        </h1>
+      </section>
     </main>
     <footer></footer>
   </body>
