added about page with animations (not responsive)

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     />
 
     <!-- css file link -->
+    <link rel="stylesheet" href="/stylesheet/utils/background.css" />
     <link rel="stylesheet" href="/stylesheet/utils/arrowbutton.css" />
     <link rel="stylesheet" href="/stylesheet/header.css" />
     <link rel="stylesheet" href="/stylesheet/home.css" />
+    <link rel="stylesheet" href="/stylesheet/about.css" />
+    <link rel="stylesheet" href="/stylesheet/home2.css" />
     <link rel="stylesheet" href="/stylesheet/hero.css" />
     <title>STRIKE</title>
   </head>
@@ -58,94 +61,97 @@
     </header>
     <main>
       <section class="s1" id="home">
-        <div class="heading">
+        <div class="heading part1">
           <h1>
-            Skip the<code class="basics-span">basics</code>.<br />
-            We only teach essential,<br />
-            <span class="high-span">high-impact</span> skills.
+            Strike Now.<br />
+            Build the Future.
           </h1>
+          <h2>
+            A community of coders, making the world a better place. Learn,
+            build, and grow with the best developers in the industry.
+          </h2>
         </div>
-        <div class="btns">
-          <!-- From Uiverse.io by Creatlydev -->
-          <button href="#" class="button" style="--clr: #333">
-            <span class="button__icon-wrapper">
-              <svg
-                viewBox="0 0 14 15"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                class="button__icon-svg"
-                width="10"
-              >
-                <path
-                  d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
-                  fill="currentColor"
-                ></path>
-              </svg>
+        <div class="part2">
+          <div class="btns">
+            <button href="#" class="button" style="--clr: #333">
+              <span class="button__icon-wrapper">
+                <svg
+                  viewBox="0 0 14 15"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="button__icon-svg"
+                  width="10"
+                >
+                  <path
+                    d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
+                    fill="currentColor"
+                  ></path>
+                </svg>
 
-              <svg
-                viewBox="0 0 14 15"
-                fill="none"
-                width="10"
-                xmlns="http://www.w3.org/2000/svg"
-                class="button__icon-svg button__icon-svg--copy"
-              >
-                <path
-                  d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
-                  fill="currentColor"
-                ></path>
-              </svg>
-            </span>
-            Paid Courses
-          </button>
+                <svg
+                  viewBox="0 0 14 15"
+                  fill="none"
+                  width="10"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="button__icon-svg button__icon-svg--copy"
+                >
+                  <path
+                    d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
+                    fill="currentColor"
+                  ></path>
+                </svg>
+              </span>
+              Paid Courses
+            </button>
 
-          <!-- From Uiverse.io by Creatlydev -->
-          <button href="#" class="button" style="--clr: #ff3a33">
-            <span class="button__icon-wrapper">
-              <svg
-                viewBox="0 0 14 15"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                class="button__icon-svg"
-                width="10"
-              >
-                <path
-                  d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
-                  fill="currentColor"
-                ></path>
-              </svg>
+            <button href="#" class="button" style="--clr: #ff3a33">
+              <span class="button__icon-wrapper">
+                <svg
+                  viewBox="0 0 14 15"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="button__icon-svg"
+                  width="10"
+                >
+                  <path
+                    d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
+                    fill="currentColor"
+                  ></path>
+                </svg>
 
-              <svg
-                viewBox="0 0 14 15"
-                fill="none"
-                width="10"
-                xmlns="http://www.w3.org/2000/svg"
-                class="button__icon-svg button__icon-svg--copy"
-              >
-                <path
-                  d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
-                  fill="currentColor"
-                ></path>
-              </svg>
-            </span>
-            Watch Demo
-            <span class="icon-yt"><i class="ri-youtube-fill"></i></span>
-          </button>
-        </div>
-        <div class="stats">
-          <div>
-            <p>
-              200+ <br />
-              Students taught
-            </p>
+                <svg
+                  viewBox="0 0 14 15"
+                  fill="none"
+                  width="10"
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="button__icon-svg button__icon-svg--copy"
+                >
+                  <path
+                    d="M13.376 11.552l-.264-10.44-10.44-.24.024 2.28 6.96-.048L.2 12.56l1.488 1.488 9.432-9.432-.048 6.912 2.304.024z"
+                    fill="currentColor"
+                  ></path>
+                </svg>
+              </span>
+              Watch Demo
+              <span class="icon-yt"><i class="ri-youtube-fill"></i></span>
+            </button>
           </div>
-          <div>
-            <p>
-              4+ <br />
-              Courses
-            </p>
-          </div>
-          <div>
-            <p>212k+ <br />Youtube Subs</p>
+          <div class="stats">
+            <div>
+              <p>
+                200+ <br />
+                Students taught
+              </p>
+            </div>
+            <div>
+              <p>
+                4+ <br />
+                Courses
+              </p>
+            </div>
+            <div>
+              <p>212k+ <br />Youtube Subs</p>
+            </div>
           </div>
         </div>
         <div class="extra">
@@ -153,14 +159,122 @@
           Scroll
         </div>
       </section>
-      <section class="s2" id="hero">
-        <h1>
-          STR<span
-            ><img
-              src="/assets/14a41f92-f694-4348-8c9f-0b42e0197539-Photoroom.png" /></span
-          >KE
-        </h1>
+      <section class="s2" id="about">
+        <div class="infinite-text">
+          <ul>
+            <li>what we do</li>
+            &Star;
+            <li>our mission</li>
+            &Star;
+            <li>our vision</li>
+            &Star;
+          </ul>
+          <ul aria-hidden="true">
+            <li>what we do</li>
+            &Star;
+            <li>our mission</li>
+            &Star;
+            <li>our vision</li>
+            &Star;
+          </ul>
+        </div>
+        <div class="part2">
+          <div class="part2inside">
+            <div class="card">
+              <div class="imgcont">
+                <img
+                  src="/assets/about/1.png"
+                  alt="Structured DSA & Interview Preparation"
+                />
+              </div>
+              <p>
+                <span>Structured DSA & Interview Preparation</span> curriculum
+                designed to help you ace your coding interviews and land your
+                dream job.
+              </p>
+            </div>
+            <div class="card">
+              <p>
+                Hands-on <span>AI projects and labs</span> to help you build
+                real-world applications using cutting-edge AI technologies.
+              </p>
+              <div class="imgcont">
+                <img
+                  src="/assets/about/2.png"
+                  alt="Generative AI Projects & Labs"
+                />
+              </div>
+            </div>
+            <div class="card">
+              <div class="imgcont">
+                <img
+                  src="/assets/about/3.png"
+                  alt="Mock Interviews & Career Guidance"
+                />
+              </div>
+              <p>
+                <span>Mock interviews and career guidance</span> from industry
+                experts to help you prepare for your job search and career
+                growth.
+              </p>
+            </div>
+            <div class="card">
+              <p>
+                <span>Certificate of completion and placement assistance</span>
+                to help you showcase your skills and land your dream job.
+              </p>
+              <div class="imgcont">
+                <img
+                  src="/assets/about/4.png"
+                  alt="Certificate & Placement Assistance"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="vertLine"></div>
+        </div>
       </section>
+      <!-- <section class="s1" id="home2">
+        <div class="cont">
+          <div style="--i: 1">
+            <span><img src="/assets/1.jpg" alt="" /></span>
+          </div>
+          <div style="--i: 2">
+            <span><img src="/assets/2.jpg" alt="" /></span>
+          </div>
+          <div style="--i: 3">
+            <span><img src="/assets/3.jpg" alt="" /></span>
+          </div>
+          <div style="--i: 4">
+            <span><img src="/assets/4.jpg" alt="" /></span>
+          </div>
+          <div style="--i: 5">
+            <span><img src="/assets/5.jpeg" alt="" /></span>
+          </div>
+          <div style="--i: 6">
+            <span><img src="/assets/6.jpeg" alt="" /></span>
+          </div>
+          <div style="--i: 7">
+            <span><img src="/assets/7.jpeg" alt="" /></span>
+          </div>
+        </div>
+
+        <div class="hero">
+          <img
+            src="/assets/14a41f92-f694-4348-8c9f-0b42e0197539-Photoroom.png"
+            alt=""
+          />
+        </div>
+
+        <div class="extra">
+          <i class="ri-arrow-down-line"></i>
+          Scroll
+        </div>
+
+        <div class="page-tear">
+          <img src="/assets/paper-tear.png" alt="" />
+        </div>
+      </section> -->
     </main>
     <footer></footer>
   </body>
