added services page and animation in about

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Audiowide&family=Notable&family=Rampart+One&family=Rubik+Glitch&family=Workbench&family=Zain:ital,wght@0,400;0,700;0,800;0,900;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Audiowide&family=Bebas+Neue&family=Notable&family=Rampart+One&family=Rubik+Glitch&family=Workbench&family=Zain:ital,wght@0,400;0,700;0,800;0,900;1,400&display=swap"
       rel="stylesheet"
     />
     <link
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="/stylesheet/header.css" />
     <link rel="stylesheet" href="/stylesheet/home.css" />
     <link rel="stylesheet" href="/stylesheet/about.css" />
+    <link rel="stylesheet" href="/stylesheet/services.css" />
     <link rel="stylesheet" href="/stylesheet/home2.css" />
     <link rel="stylesheet" href="/stylesheet/hero.css" />
     <title>STRIKE</title>
@@ -99,6 +100,67 @@
         </div>
       </section>
       <section class="s2" id="about">
+        <div class="infinite-text">
+          <ul>
+            <li>what we do</li>
+            &Star;
+            <li>our mission</li>
+            &Star;
+            <li>our vision</li>
+            &Star;
+          </ul>
+          <ul aria-hidden="true">
+            <li>what we do</li>
+            &Star;
+            <li>our mission</li>
+            &Star;
+            <li>our vision</li>
+            &Star;
+          </ul>
+        </div>
+        <div class="part2">
+          <div class="text">
+            <p>
+              Our mission is to provide high-quality, accessible tech education,
+              empowering individuals with the skills and knowledge to excel in
+              the real world.
+            </p>
+          </div>
+          <div class="stat">
+            <div>
+              <span>
+                <h1>202k+</h1>
+                <h2>Students</h2>
+              </span>
+              <p>
+                Over 200,000 students have benefited from our comprehensive
+                courses and hands-on projects.
+              </p>
+            </div>
+            <div>
+              <span>
+                <h1>4+</h1>
+                <h2>Courses</h2>
+              </span>
+              <p>
+                We offer a variety of courses covering DSA, Generative AI, and
+                interview preparation.
+              </p>
+            </div>
+            <div>
+              <span>
+                <h1>2+</h1>
+                <h2>Instructors</h2>
+              </span>
+              <p>
+                Learn from industry experts and experienced educators who are
+                passionate about teaching.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="s3" id="service">
         <div class="infinite-text">
           <ul>
             <li>what we do</li>
