added mentors and updated home, about ,mentor pages for responsiveness

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Audiowide&family=Bebas+Neue&family=Notable&family=Rampart+One&family=Rubik+Glitch&family=Workbench&family=Zain:ital,wght@0,400;0,700;0,800;0,900;1,400&display=swap"
       rel="stylesheet"
     />
+    <!-- font awesome -->
     <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
 
     <!-- css file link -->
@@ -23,7 +27,7 @@
     <link rel="stylesheet" href="/stylesheet/home.css" />
     <link rel="stylesheet" href="/stylesheet/about.css" />
     <link rel="stylesheet" href="/stylesheet/services.css" />
-    <link rel="stylesheet" href="/stylesheet/home2.css" />
+    <!-- <link rel="stylesheet" href="/stylesheet/home2.css" /> -->
     <link rel="stylesheet" href="/stylesheet/hero.css" />
     <title>STRIKE</title>
   </head>
@@ -47,7 +51,7 @@
           <a href="#about">ABOUT</a>
           <a href="#courses">COURSE</a>
           <a class="live-nav" href="#live">LIVE</a>
-          <a href="#contact"><i class="ri-user-line"></i></a>
+          <a href="#contact"><i class="fa-solid fa-user"></i></a>
         </div>
 
         <!-- Hamburger Icon (Label linked to the Checkbox) -->
@@ -76,9 +80,10 @@
             <img src="/assets/home/rohitmodel.png" alt="" />
           </div>
           <div class="text">
-            <h1>
-              Master DSA, Gen AI & Level Up Your Skills with Premium Courses
-            </h1>
+            <div class="hero">
+              <p>Launching soon 🚀</p>
+            </div>
+            <h1>STRIKE-The Frontline for Data Structures & Generative AI</h1>
             <h2>
               STRIKE is our upcoming paid course platform
               <span>featuring DSA</span>, <span>Generative AI</span>, and
@@ -92,11 +97,31 @@
               <button class="button">Watch Demo &rarr;</button>
             </div>
           </div>
+          <div class="text2">
+            <div class="card">
+              <div class="mac-header">
+                <span class="red"></span>
+                <span class="yellow"></span>
+                <span class="green"></span>
+              </div>
+              <span class="card-title">STRIKE - LIVE</span>
+              <p class="card-description">
+                Live coding sessions, project walkthroughs, and Q&A with
+                industry experts.
+              </p>
+              <span class="card-tag">HTML&CSS</span>
+              <span class="card-tag">sumeet.live</span>
+              <div class="code-editor">
+                <pre><code>&lt;h1&gt; STRIKE &lt;/h1&gt;</code></pre>
+                <pre><code>&lt;h2&gt; Coming Soon.. &lt;/h2&gt;</code></pre>
+                <pre><code>&lt;i&gt; 🚀 &lt;/i&gt;</code></pre>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="extra">
-          <i class="ri-arrow-down-line"></i>
-          Scroll
+          <i class="fa-solid fa-arrow-down fa-bounce"></i>
         </div>
       </section>
       <section class="s2" id="about">
@@ -126,36 +151,124 @@
               the real world.
             </p>
           </div>
+          <div class="cont">
+            <div>
+              <h4>
+                <span>
+                  <i
+                    class="fa-solid fa-circle-check fa-bounce fa-sm"
+                    style="color: #63e6be"
+                  ></i>
+                </span>
+                Quality Education
+              </h4>
+              <p>
+                We provide accurate, current, and relevant educational content
+                that meets high industry standards.
+              </p>
+            </div>
+            <div>
+              <h4>
+                <span>
+                  <i
+                    class="fa-solid fa-circle-check fa-bounce fa-sm"
+                    style="color: #63e6be"
+                  ></i> </span
+                >Practical Learning
+              </h4>
+              <p>
+                Use hands-on projects, real-world examples, and interactive
+                exercises to improve practical skills.
+              </p>
+            </div>
+            <div>
+              <h4>
+                <span>
+                  <i
+                    class="fa-solid fa-circle-check fa-bounce fa-sm"
+                    style="color: #63e6be"
+                  ></i> </span
+                >Community & Support
+              </h4>
+              <p>
+                Connect with peers, collaborate, and get help from mentors in a
+                supportive learning environment.
+              </p>
+            </div>
+          </div>
+
+          <div class="mentors">
+            <div class="infinite-text">
+              <ul>
+                <li>our mentors</li>
+                &Star;
+                <li>our instructor</li>
+                &Star;
+                <li>our Experts</li>
+                &Star;
+              </ul>
+              <ul aria-hidden="true">
+                <li>our mentors</li>
+                &Star;
+                <li>our instructor</li>
+                &Star;
+                <li>our Experts</li>
+                &Star;
+              </ul>
+            </div>
+            <div class="cards">
+              <div class="card">
+                <div class="imgcont">
+                  <img src="/assets/about/rohit.jpeg" alt="" />
+                </div>
+                <div class="info">
+                  <h3>Rohit Negi</h3>
+                  <h4>Founder & Instructor</h4>
+                  <div>
+                    <span>Ex-Uber</span>
+                    <span>IITIAN</span>
+                    <span>2cr+ package</span>
+                  </div>
+                  <p>
+                    Highest International Package From IIT, GATE CSE'20 AIR 202.
+                    Experienced in mentoring 1000+ students.
+                  </p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="imgcont">
+                  <img src="/assets/about/aditya.jpeg" alt="" />
+                </div>
+                <div class="info">
+                  <h3>Aditya Tandon</h3>
+                  <h4>Co-Founder & Instructor</h4>
+                  <div>
+                    <span>Ex-OLA</span>
+                    <span>currently @Onyxo</span>
+                    <span>IITIAN</span>
+                  </div>
+                  <p>
+                    Dedicated mentor committed to teaching, learning, and
+                    inspiring future Top coders and developers.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="stat">
             <div>
-              <span>
-                <h1>202k+</h1>
-                <h2>Students</h2>
-              </span>
-              <p>
-                Over 200,000 students have benefited from our comprehensive
-                courses and hands-on projects.
-              </p>
+              <h1>202k+</h1>
+              <h2>
+                <i class="fa-solid fa-graduation-cap" style="color: green"></i>
+              </h2>
             </div>
             <div>
-              <span>
-                <h1>4+</h1>
-                <h2>Courses</h2>
-              </span>
-              <p>
-                We offer a variety of courses covering DSA, Generative AI, and
-                interview preparation.
-              </p>
+              <h1>14+</h1>
+              <h2><i class="fa-solid fa-school" style="color: blue"></i></h2>
             </div>
             <div>
-              <span>
-                <h1>2+</h1>
-                <h2>Instructors</h2>
-              </span>
-              <p>
-                Learn from industry experts and experienced educators who are
-                passionate about teaching.
-              </p>
+              <h1>433k+</h1>
+              <h2><i class="fa-brands fa-youtube" style="color: red"></i></h2>
             </div>
           </div>
         </div>
